--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'container/**'
+    # paths:
+    #   - 'container/**'
 
 defaults:
   run:
@@ -13,15 +13,23 @@ defaults:
 
 jobs:
   build:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-      - run: npm install
-      - run: npm run build
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - uses: chrislennon/action-aws-cli@v1.1
-      - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/ubuntu-latest
+      - name: npm install package
+        run: npm install
+
+      - name: npm build package
+        run: npm run build
+
+      - name: aws version
+        run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/ubuntu-latest 
+
+      # - uses: chrislennon/action-aws-cli@v1.1
+      # - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/ubuntu-latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
